2003-11-01  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c: setup filter-on-thread and vfolder-on-thread.

	* mail-autofilter.c (rule_from_message): handle AUTO_THREAD
	(rule_match_thread): new function to setup a filter on a msgid

2003-10-31  Not Zed  <NotZed@Ximian.com>

	* mail-config.glade: Rearranged smime config slightly, and added
	encrypt key preference.

	* mail-account-gui.c (mail_account_gui_save,
	mail_account_gui_new): enable smime always if have_nss.  Added new
	options in glade file and handle changed names.
	(smime_changed, smime_sign_key_select, smime_sign_key_clear)
	(smime_encrypt_key_select, smime_encrypt_key_clear): Add a bunch
	of mostly dummy UI behaviour management stuff.

2003-10-30  Not Zed  <NotZed@Ximian.com>

	* em-format.c (em_format_is_inline): show application/x-pkcs7-mime
	inline always by default.

2003-10-30  Not Zed  <NotZed@Ximian.com>

	* em-format.c (emf_multipart_signed): handle
	application/x-pkcs7-signature.

2003-10-29  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (em_format_html_multipart_signed_sign): handle
	application/x-pkcs7-signature.

	* em-format.c (emf_application_xpkcs7mime): Handle
	application/x-pkcs7-mime.

2003-10-29  Jeffrey Stedfast  <fejj@ximian.com>

	* em-account-prefs.h: Changed the OAFIID.

	* em-composer-prefs.h: Changed the OAFIID.

	* em-mailer-prefs.h: Changed the OAFIID.

	* GNOME_Evolution_Mail.server.in.in: Changed OAFIIDs for the prefs
	controls.

2003-10-29  Jeffrey Stedfast  <fejj@ximian.com>

	* GNOME_Evolution_Mail.server.in.in: Nuked the MailConfig
	interface stuff.

	* Mailer.idl: Removed. None of the interfaces are needed/used
	anymore.

	* folder-info.[c,h]: Removed. The summary was the only thing that
	needed/used this code and it has been nuked into oblivion, so
	these interfaces are no longer needed.

	* mail-config.c: Removed old crufty CORBA interface snot that is
	no longer needed or used.

2003-10-27  Jeffrey Stedfast  <fejj@ximian.com>

	* Fixes bug #49816
